rollback requirements.txt and change url bdc_stac

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,56 +1,19 @@
-alabaster==0.7.12
-aniso8601==8.0.0
-astroid==2.3.1
-attrs==19.1.0
-Babel==2.7.0
-bdc-core==0.2
-bdc-theme==0.1
-Cerberus==1.3.1
-certifi==2019.9.11
-chardet==3.0.4
-Click==7.0
-coverage==4.4.2
-docutils==0.15.2
-ephem==3.7.7.0
+SQLAlchemy==1.3.0
 Flask==1.0.3
+flask_restplus==0.12.1
 Flask-Cors==3.0.8
-Flask-RESTful==0.3.6
-flask-restplus==0.12.1
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.3.2
-idna==2.7
-imagesize==1.1.0
-isort==4.3.21
-itsdangerous==1.1.0
-Jinja2==2.10.1
-jsonschema==3.0.2
-lazy-object-proxy==1.4.2
-lunardate==0.2.0
-MarkupSafe==1.1.1
-marshmallow==2.15.1
-mccabe==0.6.1
-packaging==19.2
-pyCalverter==1.6.1
-Pygments==2.4.2
-pylint==2.4.2
-pyparsing==2.4.2
-pyrsistent==0.15.4
-python-dateutil==2.8.0
+Flask-RESTful==0.3.6
+Flask-Script==2.0.6
 pytz==2017.3
+six==1.11.0
+Werkzeug==0.14.1
+coverage==4.4.2
 requests==2.20.0
 simplejson==3.12.0
-six==1.12.0
-snowballstemmer==1.9.1
-Sphinx==2.1.2
-sphinxcontrib-applehelp==1.0.1
-sphinxcontrib-devhelp==1.0.1
-sphinxcontrib-htmlhelp==1.0.2
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.2
-sphinxcontrib-serializinghtml==1.1.3
-SQLAlchemy==1.3.0
-typed-ast==1.4.0
-urllib3==1.24.3
-Werkzeug==0.14.1
 workalendar==2.3.1
-wrapt==1.11.2
+marshmallow==2.15.1
+cerberus==1.3.1
+Sphinx==2.1.2
+git+https://github.com/brazil-data-cube/bdc-core@master
+git+https://github.com/brazil-data-cube/bdc-readthedocs-theme@master
