--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,9 +2,9 @@ FROM brazildatacube/base:0.1
 
 RUN apt-get update && apt-get install -y build-essential
 
-ADD . /bdc-oauth
+ADD . /bdc-stac-compose
 
-WORKDIR /bdc-oauth
+WORKDIR /bdc-stac-compose
 
 RUN pip3 install -r requirements.txt
 
