--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alabaster==0.7.12
 aniso8601==8.0.0
+astroid==2.3.3
 attrs==19.3.0
 Babel==2.8.0
 Cerberus==1.3.1
@@ -19,12 +20,16 @@ Flask-SQLAlchemy==2.3.2
 idna==2.7
 imagesize==1.2.0
 importlib-metadata==1.4.0
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.3
 jsonschema==3.2.0
+lazy-object-proxy==1.4.3
 lunardate==0.2.0
+Mako==1.1.1
 MarkupSafe==1.1.1
 marshmallow==2.15.1
+mccabe==0.6.1
 more-itertools==8.1.0
 packaging==20.0
 pluggy==0.13.1
@@ -32,6 +37,7 @@ py==1.8.1
 pyCalverter==1.6.1
 Pygments==2.5.2
 PyJWT==1.4.2
+pylint==2.4.4
 pyparsing==2.4.6
 pyrsistent==0.15.7
 pytest==5.3.5
@@ -39,8 +45,9 @@ pytest-cov==2.8.1
 python-dateutil==2.8.1
 pytz==2017.3
 requests==2.20.0
+secure-smtplib==0.1.1
 simplejson==3.12.0
-six==1.11.0
+six==1.14.0
 snowballstemmer==2.0.0
 Sphinx==2.4.2
 sphinxcontrib-applehelp==1.0.1
@@ -50,10 +57,12 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 SQLAlchemy==1.3.13
+typed-ast==1.4.1
 urllib3==1.24.3
 wcwidth==0.1.8
 Werkzeug==0.16.1
 workalendar==2.3.1
+wrapt==1.11.2
 zipp==1.0.0
 git+https://github.com/brazil-data-cube/bdc-core@master
 git+https://github.com/brazil-data-cube/bdc-readthedocs-theme@master
