--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,4 @@
 [pytest]
 addopts = --color=auto --cov=stac_compose --cov-report=term-missing -p no:warnings
+norecursedirs = .git .vscode docker docs spec *.egg-info appdir .tox
 testpaths = tests
