--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ coverage==4.4.2
 docutils==0.16
 ephem==3.7.7.0
 Flask==1.1.1
+Flask-API==2.0
 Flask-Cors==3.0.8
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.6
