test_collections_items test cases were refactored

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 addopts = --color=auto --cov=stac_compose --cov-report=term-missing -p no:warnings
-norecursedirs = .git .vscode docker docs spec *.egg-info appdir .tox
+norecursedirs = __pycache__ .pytest_cache .git .vscode docker docs spec stac_compose *.egg-info appdir .tox tests/__pycache__ tests/json
 testpaths = tests
